# LibMcNetworking

./: .gitignore  CMakeLists.txt
src/lib/: definitions.hpp
src/lib/client/: client.cpp  client.hpp
src/lib/packet/: packet.cpp  packet.hpp
src/lib/server/: server.cpp  server.hpp
src/lib/server/connection/: connection.cpp  connection.hpp
src/testing/: clienttest.cpp  servertest.cpp
